<resources>
    <string name="app_name">Movio</string>

    <string name="generic_our">Our</string>
    <string name="generic_your">Your</string>

    <string name="input_hint_name">Name</string>
    <string name="input_hint_email">E-Mail Address*</string>
    <string name="input_hint_password">Password*</string>
    <string name="input_hint_confirm_password">Confirm Password*</string>

    <string name="input_name_error_blank">Please enter your name</string>
    <string name="input_email_error_invalid">E-Mail format you provided is invalid</string>
    <string name="input_password_error_length">Password should be at least 6 characters long</string>
    <string name="input_password_error_does_not_match">Passwords don\'t match</string>

    <string name="button_text_sign_up">Sign Up</string>

    <string name="home_movie_rating_text">%1$s / 5</string>
    <string name="home_label_favorites">Favorites</string>
    <string name="home_label_staff_picks">Staff Picks</string>
    <string name="home_greeting_default">Hello 👋</string>

    <string name="search_title">All Movies</string>
    <string name="search_input_hint">Search</string>

    <string name="details_content_title_overview">Overview</string>
    <string name="details_content_title_key_facts">Key Facts</string>

    <string name="cd_sign_up_header">Header image of sign up page consisting of various movie covers</string>
    <string name="cd_home_header_search">Icon to open movie search screen</string>
    <string name="cd_search_nav_icon">Button to navigate to previous page</string>
    <string name="cd_details_favorite">Button to favorite / un - favorite movie</string>
    <string name="cd_details_close">Close the movie details</string>
    <string name="cd_details_logo">Poster image of a movie</string>

    <string name="genre_animation">Animation</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_family">Family</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_music">Music</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_war">War</string>

    <string name="key_fact_budget">Budget</string>
    <string name="key_fact_revenue">Revenue</string>
    <string name="key_fact_language">Original Language</string>
    <string name="key_fact_rating">Rating</string>

    <string name="language_en">English</string>
    <string name="language_ja">Japanese</string>
    <string name="language_ko">Korean</string>
    <string name="language_fr">French</string>
</resources>