<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nsvSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/cd_sign_up_header"
            android:scaleType="centerCrop"
            android:src="@drawable/header_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toBottomOf="@id/ivHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHeader"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.FloatingActionButton" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sivAvatar">

            <com.arunasbedzinskas.movio.ui.components.InputField
                android:id="@+id/ifName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:imeOptions="actionNext"
                android:hint="@string/input_hint_name"
                android:inputType="textCapWords" />

            <com.arunasbedzinskas.movio.ui.components.InputField
                android:id="@+id/ifEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/input_hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <com.arunasbedzinskas.movio.ui.components.InputField
                android:id="@+id/ifPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/input_hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <com.arunasbedzinskas.movio.ui.components.InputField
                android:id="@+id/ifConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/input_hint_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/mbSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="64dp"
                android:text="@string/button_text_sign_up"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="16dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
