<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tSearchMovies"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/cd_search_nav_icon"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/search_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/App.TextAppearance.Toolbar" />

    <com.arunasbedzinskas.movio.ui.components.InputField
        android:id="@+id/ifSearchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/search_input_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:drawableStart="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tSearchMovies" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchMovies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ifSearchBar"
        tools:itemCount="5"
        tools:listitem="@layout/holder_movie" />
</androidx.constraintlayout.widget.ConstraintLayout>